2002-08-05  Sam Steingold  <sds@gnu.org>

	* install.lisp: add a URL shortcut to CLISP home to the desktop
	* makemake.in (TXT_FILES): make clisp.c on all systems
	(needs): drop .clisp and .clisp-full infavor of clisp.c
	(IMPNOTES_FILES) [win32]: added clisp.ico
	(clisp): new target
	* doc/clisp.ico: new file

2002-08-05  Sam Steingold  <sds@gnu.org>

	* m4/dynload.m4 (CL_DYNLOAD): check for <dlfcn.h> before doing
	anything else and drop out if the header is not there

2002-08-03  Sam Steingold  <sds@gnu.org>

	* spvw_garcol.d (GC_MARK): new macro
	(gc_mark_stack): use it
	(gc_mark): unroll Rectype_reallocstring
	* spvw_genera2.d (gc_mark_at, gc_mark_old_generation): use GC_MARK

2002-08-02  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-DIRECT-FUNCTION-CALL): fixed repeated key
	handling: ignore the value of the argument and issue a warning

2002-08-02  Sam Steingold  <sds@gnu.org>

	* stream.d (make_terminal_stream_) [UNIX_CYGWIN32]: check
	ttyname() instead of inodes for stdin/out_handle
	(finish_tty_output, force_tty_output) [UNIX_CYGWIN32]:
	ignore EACCES (in addition to EBADF) for xterm/rxvt
	Suggested by David Young and Matthias Linder

2002-08-01  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_HLN): fixed the "hard links to symlinks" check
	* makemake.in (TEXE, LEXE) [cygwin32]: exe/run
	(distrib): rmrf TOPDIR before making the distribution

2002-08-01  Sam Steingold  <sds@gnu.org>

	* type.lisp (COMPLEX): use UPGRADED-COMPLEX-PART-TYPE,
	just like VECTOR uses UPGRADED-ARRAY-ELEMENT-TYPE

2002-08-01  Sam Steingold  <sds@gnu.org>

	* makemake.in (DISTFILE): strip parens from OS version for cygwin

2002-08-01  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (load-lpt-many): simplified messages
	* init.lisp (load): likewise

2002-08-01  Sam Steingold  <sds@gnu.org>

	cygwin: understand win32 "c:" pathnames
	* pathname.d (PARSE-NAMESTRING) [UNIX_CYGWIN32]: use
	*DEVICE-PREFIX* to parse "c:/gnu/" --> "/cygdrive/c/gnu/"