@@ -46,7 +46,9 @@ User visible changes
 
 * When configured with --with-export-syscalls,
   several new functions are available:
-   POSIX:STREAM-LOCK provides an interface to flock(2),
+   POSIX:STREAM-LOCK provides an interface to flock(2);
+   POSIX:COPY-FILE provides an interface to link(2)/symlink(2)/rename(2),
+     (in addition to the usual file copy);
    POSIX:DUPLICATE-HANDLE provides an interface to dup(2)/dup2(2).
   See <http://clisp.cons.org/impnotes.html#syscalls> for details.
 
